--- a/feedback-app/package.json
+++ b/feedback-app/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.3.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.16.2",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.1.3",
+    "resend": "^4.6.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
